fix links in iframe

--- a/examples/external_bvh_raycasting.html
+++ b/examples/external_bvh_raycasting.html
@@ -19,8 +19,8 @@
 
 	<body>
 		<div id="info">
-			<a href="https://github.com/gkjohnson/three-mesh-bvh">three-mesh-bvh</a> accelerated raycasting demo<br/>
-			See <a href="https://github.com/gkjohnson/three-mesh-bvh">main project repository</a> for more information and examples on high performance spatial queries.
+			<a href="https://github.com/gkjohnson/three-mesh-bvh" target="_blank" rel="noopener">three-mesh-bvh</a> accelerated raycasting demo<br/>
+			See <a href="https://github.com/gkjohnson/three-mesh-bvh" target="_blank" rel="noopener">main project repository</a> for more information and examples on high performance spatial queries.
 		</div>
 
 		<!-- Import maps polyfill -->
