Renamed offsetReferenceSpace to customReferenceSpace in webXRManager

--- a/examples/webxr_vr_teleport.html
+++ b/examples/webxr_vr_teleport.html
@@ -111,7 +111,7 @@
 						const transform = new XRRigidTransform( offsetPosition, offsetRotation );
 						const teleportSpaceOffset = baseReferenceSpace.getOffsetReferenceSpace( transform );
 
-						renderer.xr.setOffsetReferenceSpace( teleportSpaceOffset );
+						renderer.xr.setReferenceSpace( teleportSpaceOffset );
 
 					}
 
