--- a/examples/webgpu_compute.html
+++ b/examples/webgpu_compute.html
@@ -30,8 +30,8 @@
 
 			import {
 				ShaderNode, compute,
-				uniform, element, storage, temp, attribute,
-				assign, add, sub, cond, abs, negate, max, min, length, vec3, color,
+				uniform, element, storage, attribute,
+				temp, assign, add, sub, cond, abs, negate, max, min, length, vec3, color,
 				greaterThanEqual, lessThanEqual, instanceIndex
 			} from 'three-nodes/Nodes.js';
 
