Manual: Modify Korean docs shadow page

--- a/manual/ko/shadows.html
+++ b/manual/ko/shadows.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="ko"><head>
     <meta charset="utf-8">
-    <title>그림자<(Shadows)/title>
+    <title>그림자<(Shadows)</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@threejs">
