reconstruction camera view offset function

--- a/examples/webgl_multiple_canvases_grid.html
+++ b/examples/webgl_multiple_canvases_grid.html
@@ -80,6 +80,7 @@
 		<script type="module">
 
 			import * as THREE from 'three';
+			import * as CameraUtils from './jsm/utils/CameraUtils.js';
 
 			const views = [];
 
@@ -103,7 +104,9 @@
 				const context = canvas.getContext( '2d' );
 
 				const camera = new THREE.PerspectiveCamera( 20, viewWidth / viewHeight, 1, 10000 );
-				camera.setViewOffset( fullWidth, fullHeight, viewX, viewY, viewWidth, viewHeight );
+
+				CameraUtils.setMultWindowOffset( camera, fullWidth, fullHeight, viewX, viewY, viewWidth, viewHeight );
+
 				camera.position.z = 1800;
 
 				this.render = function () {
