--- a/examples/webgl2_multiple_rendertargets_multisampled.html
+++ b/examples/webgl2_multiple_rendertargets_multisampled.html
@@ -158,7 +158,7 @@
 				}
 
 				renderer = new THREE.WebGLRenderer();
-				renderer.setPixelRatio( window.devicePixelRatio );
+				renderer.setPixelRatio( 1 );
 				renderer.setSize( window.innerWidth, window.innerHeight );
 				container.appendChild( renderer.domElement );
 
@@ -169,8 +169,8 @@
 
 
 				renderTarget = new THREE.WebGLMultipleRenderTargets(
-					window.innerWidth * window.devicePixelRatio,
-					window.innerHeight * window.devicePixelRatio,
+					window.innerWidth,
+					window.innerHeight,
 					2,
 					{
 						samples: effectController.msaa ? 4 : 0
@@ -285,8 +285,7 @@
 
 				renderer.setSize( window.innerWidth, window.innerHeight );
 
-				const dpr = renderer.getPixelRatio();
-				renderTarget.setSize( window.innerWidth * dpr, window.innerHeight * dpr );
+				renderTarget.setSize( window.innerWidth, window.innerHeight );
 
 				render();
 
