--- a/manual/ko/materials.html
+++ b/manual/ko/materials.html
@@ -65,7 +65,7 @@ material.color.setRGB(r, g, b)   // rgb 색상, 0부터 1까지
 const m2 = new THREE.MeshBasicMaterial({color: 'red'});            // 빨강
 const m3 = new THREE.MeshBasicMaterial({color: '#F00'});           // 빨강
 const m4 = new THREE.MeshBasicMaterial({color: 'rgb(255,0,0)'});   // 빨강
-const m5 = new THREE.MeshBasicMaterial({color: 'hsl(0,100%,50%)'); // 빨강
+const m5 = new THREE.MeshBasicMaterial({color: 'hsl(0,100%,50%)'}); // 빨강
 </pre>
 <p>이제 Three.js의 기본 재질을 살펴보겠습니다.</p>
 <p><a href="/docs/#api/ko/materials/MeshBasicMaterial"><code class="notranslate" translate="no">MeshBasicMaterial</code></a>은 광원의 영향을 받지 않습니다. <a href="/docs/#api/ko/materials/MeshLambertMaterial"><code class="notranslate" translate="no">MeshLambertMaterial</code></a>은
